[package]
name = "ESP-Wifi-Server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.37.0", features = ["full", "time"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4.35", features = ["serde"] }
futures-util = "0.3.30"
tower-http = { version = "0.5.2", features = ["cors"] }